<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_input"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_madonhang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_weight="1"
                android:text="@string/madonhang"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_trangthai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/dataodon"
                android:textAlignment="center"
                android:textColor="#C9F39103"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_tennguoinhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="10dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:text="@string/tennguoinhan"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_sodienthoai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:text="@string/sodienthoai"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_diachi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:drawableStart="@drawable/ic_location_on"
            android:drawablePadding="10dp"
            android:text="@string/diachi"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_tongcuoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:drawableStart="@drawable/ic_money"
            android:drawablePadding="10dp"
            android:text="@string/tongcuoc"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_tenhanghoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:drawableStart="@drawable/ic_box"
            android:drawablePadding="10dp"
            android:text="@string/hang_hoa"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_ghichu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_baseline_note_24"
            android:drawablePadding="10dp"
            android:text="@string/ghichu"
            android:textColor="@color/black"
            android:textSize="14dp" />


            <Button
                android:id="@+id/btn_xemchitiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#18855C"
                android:text="@string/xemchitiet"
                android:textColor="@color/white" />
            />

            <Button
                android:visibility="gone"
                android:id="@+id/btn_huy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="#BF4141"
                android:text="@string/huydon"
                android:textColor="@color/white" />
            />

    </LinearLayout>
</LinearLayout>