<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KhachHang_Screen.KH_EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#18855C"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_backprofile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_chevron_left_24"
            android:background="#18855C"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cauhinhtaikhoan"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginRight="35dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/avatar"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#18855C"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_tennguoidung"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/tennguoinhan"
                    android:drawableStart="@drawable/custom_person_ic"
                    android:background="@drawable/custom_input"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/et_sdt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/sodienthoai"
                    android:drawableStart="@drawable/custom_phone_ic"
                    android:background="@drawable/custom_input"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:drawablePadding="10dp"
                    android:inputType="number"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/email"
                    android:drawableStart="@drawable/custom_email_ic"
                    android:background="@drawable/custom_input"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/et_diachi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/diachi"
                    android:drawableStart="@drawable/custom_location_on_ic"
                    android:background="@drawable/custom_input"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/et_ngaysinh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/ngaysinh"
                    android:drawableStart="@drawable/custom_cake_ic"
                    android:background="@drawable/custom_input"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:textSize="14sp"
                    tools:ignore="Deprecated"/>

                <EditText
                    android:id="@+id/et_cmnd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/cmnd"
                    android:drawableStart="@drawable/custom_ballot_ic"
                    android:background="@drawable/custom_input"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_capnhattk"
                    android:layout_width="400dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:text="@string/capnhattaikhoan"
                    android:backgroundTint="#18855C"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>